--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <img class="toolbar-logo" src="../../assets/images/wickie_snap.png" alt="Wicke snap">
     </ion-buttons>
     <ion-title>
       Home
