--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,13 @@
 .toolbar-logo {
-    height: 50px;
-    margin-left: 10px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+.searchbar {
+  --padding-bottom: 2px;
+  padding-bottom: 2px;
+}
+
+.subwiki-card {
+  text-align: center;
 }
