--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Sign Up</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Sign Up"></app-header>
 
 <ion-content>
   <div class="container">
