add subwiki page sidemenu

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <ion-header>
     <ion-toolbar class="toolbar">
         <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
             <img class="toolbar-logo" src="../../assets/images/wickie_snap.png" alt="Wicke snap" (click)="home()">
         </ion-buttons>
         <ion-title>
