--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,32 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
-                {{p.title}}
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+    <ion-split-pane contentId="main-content">
+        <ion-menu contentId="main-content" type="overlay">
+            <ion-header>
+                <ion-toolbar>
+                    <ion-title>Menu</ion-title>
+                </ion-toolbar>
+            </ion-header>
+            <ion-content>
+                <ion-list>
+                    <ion-item-group class="category-group" *ngFor="let category of appPages | keyvalue">
+                        <ion-item class="category" *ngIf="category.value.name !== ''" (click)="toggle(category.value)">
+                            <ion-label>
+                                {{category.value.name}}
+                            </ion-label>
+                            <ion-icon slot="end"
+                                      [name]="category.value.expanded ? 'arrow-dropdown' : 'arrow-dropright'"></ion-icon>
+                        </ion-item>
+                        <ion-menu-toggle auto-hide="false" class="category-items">
+                            <ion-list *ngIf="category.value.expanded || category.value.name === ''">
+                                <ion-item class="page" *ngFor="let page of category.value.pages" (click)="navigate(page)">
+                                    {{page.title}}
+                                </ion-item>
+                            </ion-list>
+                        </ion-menu-toggle>
+                    </ion-item-group>
+                </ion-list>
+            </ion-content>
+        </ion-menu>
+        <ion-router-outlet id="main-content"></ion-router-outlet>
+    </ion-split-pane>
 </ion-app>
