--- a/src/app/create-page/create-page.page.html
+++ b/src/app/create-page/create-page.page.html
@@ -9,16 +9,19 @@
         <ion-label position="floating">Name</ion-label>
         <ion-input [(ngModel)]="name"></ion-input>
     </ion-item>
-  <div class="category">
-    <ion-item>
-        <ion-label position="floating">Category</ion-label>
-        <ion-input [(ngModel)]="category"></ion-input>
+    <div class="category">
+        <ion-item>
+            <ion-label position="floating">Category</ion-label>
+            <ion-input [(ngModel)]="category"></ion-input>
+        </ion-item>
+        <ion-list class="categories">
+            <ion-item *ngFor="let categoryname of categories | keyvalue"
+                      (click)="setCategory(categoryname.value)">{{categoryname.value}}</ion-item>
+        </ion-list>
+    </div>
+    <ion-item lines="none">
+        <ion-label *ngIf="error" color="danger">{{error}}</ion-label>
     </ion-item>
-    <ion-list class="categories">
-      <ion-item *ngFor="let categoryname of categories | keyvalue"
-                (click)="setCategory(categoryname.value)">{{categoryname.value}}</ion-item>
-    </ion-list>
-  </div>
     <ion-button (click)="cancel()">Cancel</ion-button>
     <ion-button (click)="create()">Create</ion-button>
 </ion-content>
