--- a/src/app/subwiki/subwiki.page.html
+++ b/src/app/subwiki/subwiki.page.html
@@ -1,5 +1,5 @@
 <!--suppress TypeScriptValidateTypes -->
-<app-header [title]="subwiki"></app-header>
+<app-header [title]="subwiki" [searchBar]="true"></app-header>
 
 <ion-content>
     <ion-fab vertical="top" horizontal="end" slot="fixed">
