Implemented auth check for writes. Added a spinner to login page. Added some enter-support to login page.

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,4 +22,11 @@
       --padding-start: 25px;
     }
   }
+
+  .loggedIn {
+    margin-left: 15px;
+    ion-button {
+      margin-left: 15px;
+    }
+  }
 }
