--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <ion-toolbar class="toolbar">
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
-            <img class="toolbar-logo" src="../../assets/images/wickie_snap.png" alt="Wicke snap" (click)="home()">
+            <img class="toolbar-logo" src="../../assets/images/wickie_snap.png" alt="Wickie snap" (click)="home()">
         </ion-buttons>
         <ion-title>
             {{title}}
@@ -17,7 +17,7 @@
                 Login
             </ion-button>
         </ion-buttons>
-        <ion-buttons slot="end" class="buttons" *ngIf="this.user">
+        <ion-buttons slot="end" class="buttons loggedIn" *ngIf="this.user">
             <ion-label>{{this.user}}</ion-label>
             <ion-button (click)="logout()">
                 Logout
