--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
       </div>
     </div>
   </div>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="isAuthenticated">
     <ion-fab-button (click)="createSubwiki()" size="small"><ion-icon name="add"></ion-icon></ion-fab-button>
   </ion-fab>
 </ion-content>
