--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,11 +13,11 @@
                     <ion-col>
                         <ion-item>
                             <ion-label position="floating">Email</ion-label>
-                            <ion-input type="email" [(ngModel)]="email"></ion-input>
+                            <ion-input type="email" id="email" [(ngModel)]="email" (keydown.enter)="jumpToPassword()"></ion-input>
                         </ion-item>
                         <ion-item>
                             <ion-label position="floating">Passwort</ion-label>
-                            <ion-input type="password" [(ngModel)]="password"></ion-input>
+                            <ion-input type="password" id="password" [(ngModel)]="password" (keydown.enter)="login()"></ion-input>
                         </ion-item>
                     </ion-col>
                 </ion-row>
