--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
             <ion-header>
                 <ion-toolbar>
                     <ion-title>Menu</ion-title>
-                    <ion-button (click)="createPage()" slot="end"><ion-icon name="add"></ion-icon></ion-button>
+                    <ion-button (click)="createPage()" *ngIf="isAuthenticated" slot="end"><ion-icon name="add"></ion-icon></ion-button>
                 </ion-toolbar>
             </ion-header>
             <ion-content>
