--- a/src/app/subwiki/subwiki.page.scss
+++ b/src/app/subwiki/subwiki.page.scss
@@ -10,3 +10,11 @@
     border-top: thin solid black;
   }
 }
+
+.spinner-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
