--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -37,3 +37,18 @@
     }
   }
 }
+
+.spinner-container {
+  height: 171px !important;
+  div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.invisible {
+  display: none;
+}
