--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,4 +1,4 @@
-<app-header [title]="subwiki"></app-header>
+<app-header [title]="subwiki" [isSubwiki]="true"></app-header>
 
 <ion-content>
     <ion-searchbar class="searchbar" placeholder="Search Subwiki" inputmode="text" type="text"
