--- a/src/app/subwiki/subwiki.page.html
+++ b/src/app/subwiki/subwiki.page.html
@@ -1,5 +1,5 @@
 <!--suppress TypeScriptValidateTypes -->
-<app-header [title]="subwiki" [searchBar]="true"></app-header>
+<app-header [title]="subwiki" [searchBar]="true" [isSubwiki]="true"></app-header>
 
 <ion-content *ngIf="!page">
     <div class="spinner-container">
