--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,6 +11,11 @@
 
   }
 
+  .titleContainer {
+    display: flex;
+    flex-direction: row;
+  }
+
   .buttons {
     margin: 0;
     height: 56px;
